# aoc23

./: CMakeLists.txt  LICENSE  README.md
include/aoc23/: io.h
puzzles/day1_part1/: CMakeLists.txt  README.md  main.c
puzzles/day1_part2/: CMakeLists.txt  README.md  main.c
puzzles/day2_part1/: CMakeLists.txt  README.md  main.c
puzzles/day2_part2/: CMakeLists.txt  README.md  main.c
src/: io.c
